# app/app/openapi.yaml
@@ -150,6 +150,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/app_server/exchange:
+        post:
+            tags:
+                - App
+            operationId: App_Exchange
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ExchangeRequest_SendBody'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ExchangeReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/app_server/fee_reward_list:
         get:
             tags:
@@ -543,6 +567,18 @@ components:
                 password:
                     type: string
                 sign:
+                    type: string
+        ExchangeReply:
+            type: object
+            properties:
+                status:
+                    type: string
+        ExchangeRequest_SendBody:
+            type: object
+            properties:
+                sign:
+                    type: string
+                amount:
                     type: string
         FeeRewardListReply:
             type: object
